--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
         "@types/node": "^17.0.35",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.4",
+        "chakra-dayzed-datepicker": "^0.2.0",
+        "date-fns": "^2.28.0",
+        "dayzed": "^3.2.3",
         "framer-motion": "^6.3.3",
+        "moment": "^2.29.3",
         "react": "^18.1.0",
+        "react-datetime": "^3.1.1",
         "react-dom": "^18.1.0",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "recharts": "^2.1.10",
         "typescript": "^4.6.4",
+        "uuid": "^8.3.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -48,5 +54,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/uuid": "^8.3.4"
     }
 }
